--- a/package.json
+++ b/package.json
@@ -22,9 +22,9 @@
     "webpack-node-externals": "^3.0.0"
   },
   "dependencies": {
-    "@adminjs/express": "^4.0.0",
-    "@adminjs/sequelize": "^2.0.0",
-    "adminjs": "^5.2.1",
+    "@admin-bro/express": "^3.1.0",
+    "@admin-bro/sequelize": "^1.3.0-beta.5",
+    "admin-bro": "^4.0.1",
     "bcryptjs": "^2.4.3",
     "dotenv": "^10.0.0",
     "express": "^4.17.1",
